tests/ui/traits/const-traits/overlap-const-with-nonconst.spec.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/overlap-const-with-nonconst.rs:4:27
   |
LL | #![cfg_attr(spec, feature(specialization))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `Foo` for type `(_,)`
  --> $DIR/overlap-const-with-nonconst.rs:23:1
   |
LL | / impl<T> const Foo for T
LL | | where
LL | |     T: [const] Bar,
   | |___________________- first implementation here
...
LL |   impl<T> Foo for (T,) {
   |   ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(_,)`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0119`.
